# ros2-autonomous-explorer

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  RL_MUJOCO_GUIDE.md  TODO.txt  docker-compose.yaml  fixes.txt  pyproject.toml  requirements.txt  rosdep.yaml  traintest.txt
.github/workflows/: ci.yml
models/: explorer_ppo.onnx.data
rl_checkpoints/: ppo_final_model_card.yaml  ppo_step_100000_model_card.yaml  ppo_step_1200000_model_card.yaml  ppo_step_150000_model_card.yaml  ppo_step_200000_model_card.yaml  ppo_step_250000_model_card.yaml  ppo_step_300000_model_card.yaml  ppo_step_350000_model_card.yaml  ppo_step_400000_model_card.yaml  ppo_step_450000_model_card.yaml  ppo_step_500000_model_card.yaml  ppo_step_50000_model_card.yaml  ppo_step_800000_model_card.yaml  vec_normalize.pkl
scripts/: benchmark.py  demo.py  monitor_training.sh  test_mujoco_model.py
src/autonomous_explorer/: 3DGS_SLAM_PLAN.md  CLAUDE.md  CMakeLists.txt  SPLAM_NBV_PLAN.md  package.xml
src/autonomous_explorer/autonomous_explorer/: localization.py  mapping.py  nbv_utils.py
src/autonomous_explorer/config/: ekf.yaml  exploration_bt.xml  nav2_params.yaml  sensor_fusion_params.yaml  slam_toolbox_params.yaml
src/autonomous_explorer/launch/: localization.launch.py  mapping.launch.py  nav2_exploration.launch.py  navigation.launch.py
src/autonomous_explorer/scripts/: nbv_goal_provider_node.py  obstacle_cluster_node.py
src/autonomous_explorer/urdf/: mujoco_robot.xml
src/autonomous_explorer/urdf/objects/Walking person/: model.sdf
src/autonomous_explorer/urdf/worlds/: corridors.sdf  maze_world.sdf  mujoco_maze.xml  open_field.sdf
src/my_awesome_robot/: 3DGS_SLAM_PLAN.md  CLAUDE.md  CMakeLists.txt  SPLAM_NBV_PLAN.md  package.xml
src/my_awesome_robot/config/: dynamic_world_params.yaml  exploration_bt.xml  nav2_params.yaml  perception_params.yaml  robot_params.yaml  rviz_config.rviz  sensor_fusion_params.yaml  slam_toolbox_params.yaml
src/my_awesome_robot/launch/: localization.launch.py  mapping.launch.py  nav2_exploration.launch.py  navigation.launch.py  perception.launch.py  view_robot.launch.py
src/my_awesome_robot/my_awesome_robot/: localization.py  mapping.py  nbv_utils.py
src/my_awesome_robot/scripts/: dynamic_obstacle_spawner.py  frontend_node.py  nbv_goal_provider_node.py  perception_node.py
src/my_awesome_robot/urdf/: robot.gazebo  robot.urdf.xacro
src/my_awesome_robot/urdf/objects/Walking person/: model.sdf
src/my_awesome_robot/urdf/worlds/: maze_world.sdf
src/rl_local_planner/: CMakeLists.txt  package.xml
src/rl_local_planner/config/: rl_params.yaml  training_bridge_params.yaml  training_config.yaml
src/rl_local_planner/launch/: rl_exploration.launch.py  train.launch.py  train_mujoco.launch.py  train_point2d.launch.py
src/rl_local_planner/rl_local_planner/: __init__.py  config_schema.py  curriculum.py  feature_extractor.py  gym_env.py  mujoco_env.py  mujoco_sim.py  obs_builder.py  onnx_inference.py  point2d_env.py  reward.py
src/rl_local_planner/scripts/: export_onnx.py  rl_controller_node.py  sweep_optuna.py  train_ppo.py
src/rl_local_planner/tests/: conftest.py  test_curriculum.py  test_obs_builder.py  test_reward.py
src/sensor_fusion/: package.xml  setup.py
src/sensor_fusion/sensor_fusion/: sensor_fusion_node.py
src/sensor_fusion_preprocess/: package.xml  setup.cfg  setup.py
src/sensor_fusion_preprocess/sensor_fusion_preprocess/: sensor_fusion_preprocess_node.py
tb_logs/: evaluations.npz
